[project]
name = "word-scramble"
version = "0.1.0"
description = "A fun word scramble game built with Python!"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rich>=14.2.0,<15.0.0"
]

[project.scripts]
word-scramble = "word_scramble.main:main"


[tool.poetry]
packages = [{ include = "word_scramble", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
ruff = "^0.5.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
